--- a/landingPage/morphs_logox/index.html
+++ b/landingPage/morphs_logox/index.html
@@ -9,11 +9,105 @@
 </head>
 
 <body>
+    <section class="sticky">
 
-    <section class="hero">
-        <div class="hover-img">
-            <img src="./292.JPG" alt="">
+        <div class="logo">
+            <div class="col">
+                <div class="block"></div>
+                <div class="block"></div>
+            </div>
+
+            <div class="col">
+                <div class="block"></div>
+                <div class="block"></div>
+            </div>
+
+            <div class="col">
+                <div class="block"></div>
+                <div class="block"></div>
+            </div>
+
         </div>
+
+
+        <div class="cubes">
+
+            <div class="cube cube-1">
+                <div class="front"></div>
+                <div class="back"></div>
+                <div class="right"></div>
+                <div class="left"></div>
+                <div class="top"></div>
+                <div class="bottom"></div>
+            </div>
+
+            <div class="cube cube-2">
+                <div class="front"></div>
+                <div class="back"></div>
+                <div class="right"></div>
+                <div class="left"></div>
+                <div class="top"></div>
+                <div class="bottom"></div>
+            </div>
+
+            <div class="cube cube-3">
+                <div class="front"></div>
+                <div class="back"></div>
+                <div class="right"></div>
+                <div class="left"></div>
+                <div class="top"></div>
+                <div class="bottom"></div>
+            </div>
+
+            <div class="cube cube-4">
+                <div class="front"></div>
+                <div class="back"></div>
+                <div class="right"></div>
+                <div class="left"></div>
+                <div class="top"></div>
+                <div class="bottom"></div>
+            </div>
+
+
+             <div class="cube cube-5">
+                <div class="front"></div>
+                <div class="back"></div>
+                <div class="right"></div>
+                <div class="left"></div>
+                <div class="top"></div>
+                <div class="bottom"></div>
+            </div>
+
+
+              <div class="cube  cube-6">
+                <div class="front"></div>
+                <div class="back"></div>
+                <div class="right"></div>
+                <div class="left"></div>
+                <div class="top"></div>
+                <div class="bottom"></div>
+            </div>
+            
+        </div>
+
+        
+
+        <div class="header-1">
+            <h1>the first media company for the digital first geneartion</h1>
+        </div>
+
+        <div class="header-2">
+            <h2>Where innovation meets precision</h2>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe nesciunt praesentium quidem doloremque pariatur reprehenderit quos, quo excepturi minima sapiente 
+                similique eaque esse voluptatem vitae iure, rerum itaque aliquam temporibus.</p>
+        </div>
+
+    </section>
+
+
+    <section class="about">
+        <h1>Your next section goes here</h1>
     </section>
 
     <script type="module" src="/script.js"></script>
