Styling for morphx

--- a/landingPage/morphs_logox/index.html
+++ b/landingPage/morphs_logox/index.html
@@ -12,19 +12,20 @@
     <section class="sticky">
 
         <div class="logo">
+
             <div class="col">
-                <div class="block"></div>
-                <div class="block"></div>
+                <div class="block block-1"></div>
+                <div class="block block-2"></div>
             </div>
 
             <div class="col">
-                <div class="block"></div>
-                <div class="block"></div>
+                <div class="block block-3"></div>
+                <div class="block block-4"></div>
             </div>
 
             <div class="col">
-                <div class="block"></div>
-                <div class="block"></div>
+                <div class="block block-5"></div>
+                <div class="block block-6"></div>
             </div>
 
         </div>
