--- a/landingPage/morphs_logox/index.html
+++ b/landingPage/morphs_logox/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Morphs Logo - Digital First Media</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
@@ -12,7 +12,6 @@
     <section class="sticky">
 
         <div class="logo">
-
             <div class="col">
                 <div class="block block-1"></div>
                 <div class="block block-2"></div>
@@ -27,12 +26,11 @@
                 <div class="block block-5"></div>
                 <div class="block block-6"></div>
             </div>
-
         </div>
 
 
         <div class="cubes">
-
+            <!-- 6 Cubes that will surround the text -->
             <div class="cube cube-1">
                 <div class="front"></div>
                 <div class="back"></div>
@@ -69,8 +67,7 @@
                 <div class="bottom"></div>
             </div>
 
-
-             <div class="cube cube-5">
+            <div class="cube cube-5">
                 <div class="front"></div>
                 <div class="back"></div>
                 <div class="right"></div>
@@ -79,8 +76,7 @@
                 <div class="bottom"></div>
             </div>
 
-
-              <div class="cube  cube-6">
+            <div class="cube cube-6">
                 <div class="front"></div>
                 <div class="back"></div>
                 <div class="right"></div>
@@ -88,20 +84,15 @@
                 <div class="top"></div>
                 <div class="bottom"></div>
             </div>
-            
         </div>
 
-        
-
         <div class="header-1">
-            <h1>the first media company for the digital first geneartion</h1>
+            <h1>the first media company for the digital first generation</h1>
         </div>
 
         <div class="header-2">
             <h2>Where innovation meets precision</h2>
-
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe nesciunt praesentium quidem doloremque pariatur reprehenderit quos, quo excepturi minima sapiente 
-                similique eaque esse voluptatem vitae iure, rerum itaque aliquam temporibus.</p>
+            <p>Creating compelling stories and experiences that resonate with the modern audience.</p>
         </div>
 
     </section>
