--- a/loader/loadText/index.html
+++ b/loader/loadText/index.html
@@ -79,8 +79,78 @@
                 A 250, 250 0 0,1 500,750
                 A 250, 250 0 0,1 499.99,250
             " />
+
+
+            <text class="orbit-text">
+                <textPath href="#loader-orbit-1" startOffset="31%" textLength="300">
+                    Developer
+                </textPath>
+            </text>
+
+            <text class="orbit-text">
+                <textPath href="#loader-orbit-2" startOffset="30%" textLength="280">
+                    Frontend
+                </textPath>
+            </text>
+
+            <text class="orbit-text">
+                <textPath href="#loader-orbit-3" startOffset="33%" textLength="240">
+                    Designer
+                </textPath>
+            </text>
+
+
+            <text class="orbit-text">
+                <textPath href="#loader-orbit-4" startOffset="32%" textLength="260">
+                    Creative
+                </textPath>
+            </text>
+
+
+            <text class="orbit-text">
+                <textPath href="#loader-orbit-5" startOffset="30%" textLength="290">
+                    Developer
+                </textPath>
+            </text>
+
+
+                        <text class="orbit-text">
+                <textPath href="#loader-orbit-6" startOffset="31%" textLength="200">
+                    Developer
+                </textPath>
+            </text>
+
+                <text class="orbit-text">
+                <textPath href="#loader-orbit-7" startOffset="30%" textLength="210">
+                    Developer
+                </textPath>
+            </text>
+
+            <text class="orbit-text">
+                <textPath href="#loader-orbit-8" startOffset="32%" textLength="190">
+                    Developer
+                </textPath>
+            </text>
         </svg>
+
+
+        <div class="counter">
+            <p>0</p>
+        </div>
     </div>
+
+    <section class="hero">
+        <div class="hero-bg">
+            <img src="/public/e-ac-1.jpg" alt=""/>
+        </div>
+
+        <div class="hero-copy">
+            <p>Your content goes here</p>
+        </div>
+    </section>
+
+
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
