--- a/loader/loadText/index.html
+++ b/loader/loadText/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -82,53 +83,53 @@
 
 
             <text class="orbit-text">
-                <textPath href="#loader-orbit-1" startOffset="31%" textLength="300">
+                <textPath href="#loader-orbit-1" startOffset="3%" textLength="300">
                     Developer
                 </textPath>
             </text>
 
             <text class="orbit-text">
-                <textPath href="#loader-orbit-2" startOffset="30%" textLength="280">
+                <textPath href="#loader-orbit-2" startOffset="5%" textLength="280">
                     Frontend
                 </textPath>
             </text>
 
             <text class="orbit-text">
                 <textPath href="#loader-orbit-3" startOffset="33%" textLength="240">
-                    Designer
-                </textPath>
-            </text>
-
-
-            <text class="orbit-text">
-                <textPath href="#loader-orbit-4" startOffset="32%" textLength="260">
                     Creative
                 </textPath>
             </text>
 
 
             <text class="orbit-text">
-                <textPath href="#loader-orbit-5" startOffset="30%" textLength="290">
-                    Developer
+                <textPath href="#loader-orbit-4" startOffset="1%" textLength="260">
+                    Designer
+                </textPath>
+            </text>
+
+
+            <text class="orbit-text">
+                <textPath href="#loader-orbit-5" startOffset="10%" textLength="290">
+                    Portfolio
                 </textPath>
             </text>
 
 
                         <text class="orbit-text">
                 <textPath href="#loader-orbit-6" startOffset="31%" textLength="200">
-                    Developer
+                    Digital
                 </textPath>
             </text>
 
                 <text class="orbit-text">
-                <textPath href="#loader-orbit-7" startOffset="30%" textLength="210">
-                    Developer
+                <textPath href="#loader-orbit-7" startOffset="33%" textLength="210">
+                    Modern
                 </textPath>
             </text>
 
             <text class="orbit-text">
                 <textPath href="#loader-orbit-8" startOffset="32%" textLength="190">
-                    Developer
+                    Design
                 </textPath>
             </text>
         </svg>
@@ -137,9 +138,11 @@
         <div class="counter">
             <p>0</p>
         </div>
+
     </div>
 
-    <section class="hero">
+
+        <section class="hero">
         <div class="hero-bg">
             <img src="/public/e-ac-1.jpg" alt=""/>
         </div>
@@ -148,7 +151,6 @@
             <p>Your content goes here</p>
         </div>
     </section>
-
 
     <script type="module" src="script.js"></script>
 </body>
